@@ -100,9 +100,6 @@ private:
 	data has been read. Often a no-op. */
 	static void term_source (j_decompress_ptr cinfo);
 
-	// Copy filename to have it around for error-messages
-	static io::path Filename;
-
 	#endif // _IRR_COMPILE_WITH_LIBJPEG_
 };
 
