@@ -1,5 +1,6 @@
 --------------------------
 Changes in 1.9 (not yet released)
+- Make CImageLoaderJPG thread safe. Thanks @ Edoardo Lolletti for report and patch (patch #324)
 - Add ETCF_SUPPORT_VERTEXT_TEXTURE flag which can be used to enable vertex texture sampling support in Direct3D 9.
   Note that this was enabled for a long time in 1.9 svn, but is now disabled by default.
 - CGUIListBox now serializes the state of "Selected". Feature wish by chronologicaldot (http://irrlicht.sourceforge.net/forum/viewtopic.php?f=2&t=52719)
